socket数据推送模拟

--- a/src/main/resources/static/maptracking/html/demo.html
+++ b/src/main/resources/static/maptracking/html/demo.html
@@ -21,10 +21,10 @@
     var maptrack = new Maptrack({
         dom: "apiId",
         mapType: 'bmap',
-        mapTrack: true,
-        trackconfig: {
+        mapMointer: true,
+       /* config: {
             trackApi: '/api/sample'
-        }
+        }*/
     });
     maptrack.init();
 </script>
