示例代码提交

--- a/src/main/resources/static/maptracking/html/demo.html
+++ b/src/main/resources/static/maptracking/html/demo.html
@@ -19,10 +19,14 @@
         mapTrack: true,
         mapMointer: false,
         config: {
-            // soketUrl: 'ws://192.168.75.1:8889/api/ws/gpsWebSocket'
+            soketUrl: 'ws://192.168.75.1:8889/api/ws/gpsWebSocket',
+            vinCode:'LZWADAGA2GE409060',
             trackControl: {
-                startButton: '开',
-            }
+                startButton: '开'
+            },
+            trackApi: '/api/sample',
+            startIcon: "../img/1.jpg"
+
         }
     });
 
