--- a/src/main/resources/static/maptracking/html/demo.html
+++ b/src/main/resources/static/maptracking/html/demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>hello</title>
-    <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="../css/reset.css"/>
 </head>
 <body>
 
@@ -13,23 +13,88 @@
 <script src="../../../api/sample/ics/static/maptracking/js/testbundle.js">
 </script>
 <script>
-    new Maptrack({
+    let track = new Maptrack({
         dom: "apiId",
         mapType: 'bmap',
-        mapTrack: true,
-        mapMointer: false,
+        mapTrack: true,       // 是否开启轨迹
+        splitTrack: false,       // 是否开启分段轨迹
+        mapMointer: false,   // 是否开启推送
         config: {
-            soketUrl: 'ws://192.168.75.1:8889/api/ws/gpsWebSocket',
-            vinCode:'LZWADAGA2GE409060',
-            trackControl: {
-                startButton: '开'
-            },
-            trackApi: '/api/sample',
-            startIcon: "../img/1.jpg"
-
+            gps: [116.404, 39.915], // 初始化地图经纬度
+            zoom: 16,                // 初始化地图层级
+            trackApi: '/api/sample',           // 自定义路径
+            trackParam: {startTime: 1539108541000, endTime: 1539109463000, vin: "LVGEN56A4JG247290"},  // 轨迹参数
+            splitTrackParam: {startTime: 1543785649000, endTime: 1543856950000, vin: "LVGEN56A4JG247290"},  // 分段轨迹参数
+            soketUrl: 'ws://192.168.75.1:8889/api/ws/gpsWebSocket',   // 推送地址
+            vinCode: 'LFMB0ABB9F0005006',     // 推送vin码
+            iconUrl: '../img/car.png',    // 车辆图标
+            startIcon: "../img/start.png",  // 轨迹开始图标
+            endIcon: "../img/end.png",    // 轨迹结束图标
+            iconSize: [28, 28],  // 图标尺寸，默认28
+            trackControl: {    // 轨迹按钮自定义
+                startButton: '开',
+                endButton: '暂停',
+                stopButton: '停止',
+                reduceButton: '减速',
+                addButton: '加速'
+            }
         }
     });
+    // 轨迹点击事件
+    track.on("play", function () {
+        console.log('you click play!');
+    })
+    track.on("pause", function () {
+        console.log('you click pause!');
+    })
+    track.on("stop", function () {
+        console.log('you click stop!');
+    })
+    track.on("add", function () {
+        console.log('you click add!');
+    })
+    track.on("reduce", function () {
+        console.log('you click reduce!');
+    })
+    // gps转成百度坐标
+    // track.translateToBmap({lat: 39.990912172420714, lng: 116.32715863448607})
+    // gps转高德坐标
+    // track.GPS.translateToAmap({lat: 39.990912172420714, lng: 116.32715863448607})
+    // 创建点
+    track.init((BMap, map) = > {
+        let data = {
+            lat: 39.990912172420714,
+            lng: 116.32715863448607
+        }
+        let newData = track.translateToBmap(data)
+        let point = new BMap.Point(newData.lng, newData.lat);
+    let marker = new BMap.Marker(point);
+    map.addOverlay(marker);  // 标点
+    })
 
+    // 加载多个地图
+    // let api = new Maptrack({
+    //     dom: "api",
+    //     mapType: 'bmap',
+    //     mapTrack: false,       // 是否开启轨迹
+    //     mapMointer: false,   // 是否开启推送
+    //     config: {
+    //         // soketUrl: 'ws://192.168.75.1:8889/api/ws/gpsWebSocket'
+    //         trackControl: {
+    //             startButton: '开',
+    //         }
+    //     }
+    // });
+    // api.init((BMap, map) => {
+    //     let data = {
+    //         lat: 39.990912172420714,
+    //         lng: 116.32715863448607
+    //     }
+    //      let newData = track.translateToBmap(data)
+    //     let point = new BMap.Point(newData.lng, newData.lat);
+    //     let marker = new BMap.Marker(point);
+    //     map.addOverlay(marker);  // 标点
+    //    })
 </script>
 </body>
 </html>
